# kg-ui-toolkit

./: API.md  Cargo.toml  README.md  bblocks-config-local.yaml  bblocks-config-local.yml  bblocks-config.yaml  build.sh
.github/workflows/: process-bblocks.yml
_sources/ai/chat/: bblock.json
_sources/ai/wispera/: bblock.json  examples.yaml
_sources/kg-toolkit/: bblock.json
_sources/prov/trace/: bblock.json
sample_data/: a-plus-b.ttl  agent.json  path_q1.json  path_q2.json  path_q3.json  path_q4.json  q1.json  q2.json  q3.json  q4.json  q5.json  q6.json
src/: lib.rs  models.rs
src/apis/: mod.rs  sparql.rs
src/components/: activity.rs  agent.rs  dimview.rs  entity.rs  mod.rs  spatial_entities.rs  spatial_entity.rs
